@@ -1,3 +1,8 @@
+2008-07-31  Ivan frade  <ivan.frade@nokia.com>
+
+	* tests/libtracker-common/tracker-parser-test.c:
+	Added test to tracker_parser_text_fast
+
 2008-07-31  Ivan Frade  <ivan.frade@nokia.com>
 
 	* utils/qdbm/Makefile.am
